# FidelityFX-SDK-Linux

./: readme.md
sdk/: CMakeLists.txt  setup.sh  toolchain.cmake
sdk/include/FidelityFX/host/: ffx_message.h  ffx_types.h
sdk/src/components/frameinterpolation/: ffx_frameinterpolation.cpp
sdk/src/components/fsr3/: ffx_fsr3.cpp
sdk/src/components/fsr3upscaler/: ffx_fsr3upscaler.cpp
sdk/src/components/opticalflow/: ffx_opticalflow.cpp
sdk/tools/ffx_shader_compiler/: CMakeLists.txt
sdk/tools/ffx_shader_compiler/libs/tiny-process-library/: CMakeLists.txt
sdk/tools/ffx_shader_compiler/src/: pch.hpp
sdk/tools/temp storage/: DXBCChecksum.cpp
